Remove learn more links for SSL_PROTOCOL_ERROR and ERR_SSL_FALLBACK_BEYOND_MINIMUM_VERSION

BUG=607052

Review-Url: https://codereview.chromium.org/1979213002
Cr-Commit-Position: refs/heads/master@{#394212}

Former-commit-id: c0eef912c1bcb683a719a3376f307c7ae925adc1